Restore compilation after merge